Added project files

--- a/index.html
+++ b/index.html
@@ -1,1 +1,6 @@
-"Hello World"
+Some projects
+
+<ul>
+	<li><a href="conspiracy/conspiracy.html" target="_blank">conspiracy theory generator</a></li>
+	<li><a href="week3.html" target="_blank">week 3</a></li>
+</ul>
