--- a/index.html
+++ b/index.html
@@ -2,5 +2,5 @@ Some projects
 
 <ul>
 	<li><a href="conspiracy/conspiracy.html" target="_blank">conspiracy theory generator</a></li>
-	<li><a href="week3.html" target="_blank">week 3</a></li>
+	<li><a href="week3/index.html" target="_blank">week 3</a></li>
 </ul>
