--- a/week3/index.html
+++ b/week3/index.html
@@ -10,78 +10,19 @@
            var overDiv = document.getElementById("over");
            var objToday = new Date();
            var m = objToday.getTime();
-           if (m < 1516738800000) {
+           if (m < 151673880000) {
             timerDiv.style.display = 'inline';
             overDiv.style.display = 'none';
            } else {
             timerDiv.style.display = 'none';
-            contentDiv.style.display = 'none';
-            overDiv.style.display = 'inline';
+            contentDiv.style.display = 'inline';
+            overDiv.style.display = 'none';
            }
         }
 
         function loadImages(){
 
         }
-
-	    function myFunction() {
-			// number of theory templates
-			var numTemplates = 5;
-			
-			// user input from text field
-			var input = document.getElementById('txtInput').value;
-    		
-    		// replace all NOUNs with input
-    		var list = document.getElementsByClassName("noun");
-    		for (var i = 0; i < list.length; i++) {
-    			list[i].innerHTML = input;
-    		} 
-
-    		// hide the header
-    		// document.getElementById('header').style.display = 'none';
-
-    		// get a random template, hide others
-    		var randTemplate = Math.floor((Math.random() * numTemplates));
-    		var types = document.getElementsByClassName("page");
-    		for (var i = 0; i < numTemplates; i++) {
-    			types[i].style.display = 'none';
-    		}
-    		types[randTemplate].style.display = 'block';
-
-    		// get a random style sheet
-    		var randStyle = Math.floor((Math.random() * numTemplates));
-			var sheet = "conspiracystyle" + randStyle + ".css";
-    		var style = document.getElementById("whichstyle");
-    		style.href = sheet;
-
-    		// set random colors
-    		var list = document.getElementsByClassName("title");
-    		for (var i = 0; i < list.length; i++) {
-    			console.log(getRandomColor());
-    			list[i].style.color = getRandomColor();
-    		}
-    		var list = document.getElementsByClassName("subtitle");
-    		for (var i = 0; i < list.length; i++) {
-    			console.log(getRandomColor());
-    			list[i].style.color = getRandomColor();
-    		}
-    		var list = document.getElementsByClassName("subsubtitle");
-    		for (var i = 0; i < list.length; i++) {
-    			console.log(getRandomColor());
-    			list[i].style.color = getRandomColor();
-    		}
-    		var list = document.getElementsByClassName("justtext");
-    		for (var i = 0; i < list.length; i++) {
-    			console.log(getRandomColor());
-    			list[i].style.color = getRandomColor();
-    		}
-			var list = document.getElementsByClassName("images");
-    		for (var i = 0; i < list.length; i++) {
-    			console.log(getRandomColor());
-    			list[i].style.borderColor = getRandomColor();
-    		}
-    		document.getElementById('content').style.backgroundColor = getRandomColor();
-		}
 	</script>
 </head>
 
@@ -92,7 +33,7 @@
         </div>
         
 	    <div id="content">
-           <img src="">
+           <img src="week3.gif">
         </div>
         <div id="over">
            <h3>This website is over.</h3>
