title for homepage

--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
-Some projects
+<head>
+	<title>• zack wilson •</title>
+</head>
+<body>
+	Some projects
 
-<ul>
-	<li><a href="conspiracy/conspiracy.html" target="_blank">conspiracy theory generator</a></li>
-	<li><a href="week3/index.html" target="_blank">week 3</a></li>
-</ul>
+	<ul>
+		<li><a href="conspiracy/conspiracy.html" target="_blank">conspiracy theory generator</a></li>
+		<li><a href="week3/index.html" target="_blank">week 3</a></li>
+	</ul>
+</body>
