--- a/projects.html
+++ b/projects.html
@@ -41,7 +41,7 @@
                			<p>Collaboratively designed and ran a study into home-delivery grocery systems, with a focus on integrating them into workflow in the kitchen (e.g. smart kitchens, meal planning, etc.).</p>
                		</li>
                		<li>
-               			Multiple artworks and installations involving robotics, Arduinos and web applications, as well as some works in more traditional mediums (please visit my website for a more complete collection and documentation of my work).
+               			Multiple artworks and installations involving robotics, Arduinos and web applications, as well as some works in more traditional mediums.
                		</li>
                		<li>
                			Built several simple games as proofs of concept for functional programming and AI courses.
