--- a/resume.html
+++ b/resume.html
@@ -36,7 +36,7 @@
                                 <li><a href="https://www.ck12.org" target="blank">Ck-12 - 2011-16</a>
                                     <p>Graphic designer: I developed a prototype content delivery app for iOS, created graphics for many of their science textbooks, created the template for their study guides, and designed templates and examples for new web applications in development.</p>
                                 </li>
-                                <li><a href="">4Band - 2013-14</a>
+                                <li><u>4Band - 2013-14</u>
                                     <p>UI/UX Designer and Lead Illustrator for a small music collaboration startup, 4Band, from 2013-2014.  I was tasked with the company logo and branding, as well as creating the UI elements of the software. With the other designer, we designed the entire user experience: a limited social platform plus recording software for musicians to collaborate within.</p>
                                 </li>
                             </ul>
@@ -59,7 +59,25 @@
                 <hr>
                 <table>
                     <tr>
-                        <td style="text-align: center;"><h1>Other</h1><h1>Experience</h1></td>
+                        <td style="text-align: center;"><h1>Technical</h1><h1>Skills</h1></td>
+                        <td style="text-align: left; width:85%;">
+                            <ul>
+                                <li><u>Adobe Creative Suite</u>
+                                    <p>Illustrator, Photoshop, InDesign, AfterEffects</p>
+                                </li>
+                                <li><u>Coding languages</u>
+                                    <p>C, C++, Obj-C (iOS development); Java (desktop and Android development); Javascript, HTML, CSS (web applications and prototyping); SVN/Git; SQL and Database design</p>
+                                </li>
+                                <li><u>Sound and Video</u>
+                                    <p>Reason, ProTools and GarageBand; FinalCutPro</p>
+                                </li>
+                            </ul>
+                        </td>
+                    </tr>
+                </table>
+                <hr>
+                <table>
+                    <tr>
                         <td style="text-align: left; width:85%;">
                             <ul>
                                 <li><a href="https://www.idtech.com" target="blank">iD-Tech Camps</a>
@@ -68,11 +86,12 @@
                                 <li><a href="http://romp.com" target="blank">ROMP Snowwear</a>
                                     <p>North American Team Rider for ROMP Snowwear from 2013–2016. Creating original web content: videos and photos, and raising brand awareness through promotions, community outreach, and social media.</p>
                                 </li>
-                                <li><a href="">Adobe/Foothill College</a>
+                                <li><u>Adobe/Foothill College</u>
                                     <p>Instructor for Adobe Day at Foothill College, teaching local middle- and high school teachers Adobe Photoshop, InDesign, Illustrator, Flash, and Acrobat.</p>
                                 </li>
                             </ul>
                         </td>
+                        <td style="text-align: center;"><h1>Other</h1><h1>Experience</h1></td>
                     </tr>
                 </table>
 			</div>
