Spinning up the hamster...

--- a/directory.html
+++ b/directory.html
@@ -9,6 +9,7 @@
 		<li><a href="conspiracy/conspiracy.html" target="_blank">conspiracy theory generator</a></li>
 		<li><a href="week3/index.html" target="_blank">week 3</a></li>
 		<li><a href="audio/reading.mp3" target="_blank">reason</a></li>
+		<li><a href="visa4/index.html" target="blank">Fantastic Beasts Page</a></li>
 		<li><a href="https://www.questionpro.com/t/AN7UrZbWT6" target="blank">Fantastic Beasts Survey</a></li>
 	</ul>
 </body>
