--- a/directory.html
+++ b/directory.html
@@ -11,5 +11,6 @@
 		<li><a href="audio/reading.mp3" target="_blank">reason</a></li>
 		<li><a href="visa4/index.html" target="blank">Fantastic Beasts Page</a></li>
 		<li><a href="https://www.questionpro.com/t/AN7UrZbWT6" target="blank">Fantastic Beasts Survey</a></li>
+		<li><a href="media/fractal.gif" target="blank">nature</a></li>
 	</ul>
 </body>
