--- a/directory.html
+++ b/directory.html
@@ -13,5 +13,6 @@
 		<li><a href="https://www.questionpro.com/t/AN7UrZbWT6" target="blank">Fantastic Beasts Survey</a></li>
 		<li><a href="media/fractal.gif" target="blank">nature1</a></li>
 		<li><a href="media/fractal2.gif" target="blank">nature2</a></li>
+		<li><a href="media/fractal1.mov" target="blank">a basic fractal animation</a></li>
 	</ul>
 </body>
