--- a/resume.html
+++ b/resume.html
@@ -28,10 +28,10 @@
                         <td style="text-align: left; width:85%;">
                             <ul>
                                 <li><a href="http://www.cs.ubc.ca/labs/imager/laboverview.php" target="blank">UBC MUX Lab - 2017-present</a>
-                                    <p>Reasearch assistant: Working with another undergraduate researcher, we've built a prototype kiosk application to facilitate self-directed learning of smart phones by seniors. We began with some preliminary lightweight user testing, then designed and ran a controlled experiment in collaboration with a post-doc in Japan.</p>
+                                    <p>Research assistant: Working with one other undergraduate researcher, I built a prototype kiosk application to facilitate self-directed learning of smart phones by seniors. We began with some preliminary lightweight user testing, then design iterations on the kiosk, and finally we designed and ran a controlled experiment in collaboration with a post-doc in Japan.</p>
                                 </li>
                                 <li><a href="https://ahva.ubc.ca" target="blank">UBC AHVA - 2016-present</a>
-                                    <p>Web master and graphic designer: Created posters for department events, and kept the website up to date. I also streamlined some backend processes: simplified information input for administrative staff, and reorganized categorization to enable more automation.</p>
+                                    <p>Web master and graphic designer: Working as the design, gallery, and web assistant for the Art History, Visaul Art and Theory (AHVA) department at UBC, I designed promotional material for all department events, and openings at the AHVA gallery. As a web master, I kept the website up to date,  migrated department orientation materials from paper to the website, and translated all the department safety training to online courses. I also streamlined some backend processes: simplified information input for administrative staff, and reorganized categorization to enable more automation.</p>
                                 </li>
                                 <li><a href="https://www.ck12.org" target="blank">Ck-12 - 2011-16</a>
                                     <p>Graphic designer: I developed a prototype content delivery app for iOS, created graphics for many of their science textbooks, created the template for their study guides, and designed templates and examples for new web applications in development.</p>
