--- a/index.html
+++ b/index.html
@@ -39,12 +39,13 @@
                 </div>
 			</div>
 			<div id="caption">
-                <h1>designer, artist, programmer; studying computer science, human-computer interaction design, fine art at ubc.</h1>
+                <h1>designer, artist, programmer; computer science, human-computer interaction design, fine art.</h1>
 			</div>
 			<div id="content" align="right">
-                <p>I'm a student at the University of British Columbia, studying Computer Science and Visual Art.</p>
-				<p>I'm currently the designer for the AHVA Department at UBC, primarily for their gallery, as well as keeping their websites up to daye and some other in-house design work (posters, information graphics, etc.).</p>
-                <p>I'm also working as an undergraduate researcher in the Human-Computer Interaction Lab at UBC, conducting research into the way older adults learn and adopt new technology, and the way larger displays can be leveraged to increase the utility of mobile devices.</p>
+                <p>I'm a recent graduate from the University of British Columbia, in Computer Science and Visual Art.</p>
+				<p>I'm currently the web and design assistant for the Art History, Visaul Art and Theory Department at UBC – keeping their websites up to date, generating new content, and doing any in-house design work (posters, information graphics, etc.).</p>
+                <p>I'm also working as a researcher in the Human-Computer Interaction Lab at UBC, conducting research into the way older adults learn and adopt new technology, and the way larger displays can be leveraged to increase the utility of mobile devices.</p>
+                <p>This fall I am beginning my Masters degree in Human-Computer Interaction Design at the EIT Digital Masters School in Europe.</p>
                 <p>&nbsp;</p>
 				<h2>Here's a little bit about me.</h2>
 			</div>
