--- a/projects.html
+++ b/projects.html
@@ -47,6 +47,14 @@
                			Built several simple games as proofs of concept for functional programming and AI courses.
                		</li>
                	</ul>
+               	<p>Some varied art projects:</p>
+               	<ul>
+               		<li><a href="https://glitch.com/@zlwilson" target="blank">glitch.me profile</a> (featuring some experiments in VR and AR art)</li>
+               		<li><a href="conspiracy/conspiracy.html" target="_blank">conspiracy theory generator</a></li>
+					<li><a href="week3/index.html" target="_blank">week 3</a></li>
+					<li><a href="visa4/index.html" target="blank">Fantastic Beasts Page</a></li>
+					<li><a href="media/fractal1.mov" target="blank">a basic fractal animation</a></li>
+               	</ul>
 			</div>
             <div id="under-construction">
                 <h1>Site under construction; please check back for updates soon.</h1>
