--- a/index.html
+++ b/index.html
@@ -42,12 +42,13 @@
                 <h1>designer, artist, programmer; computer science, human-computer interaction design, fine art.</h1>
 			</div>
 			<div id="content" align="right">
-                <p>I'm a recent graduate from the University of British Columbia, in Computer Science and Visual Art.</p>
-				<p>I'm currently the web and design assistant for the Art History, Visaul Art and Theory Department at UBC – keeping their websites up to date, generating new content, and doing any in-house design work (posters, information graphics, etc.).</p>
-                <p>I'm also working as a researcher in the Human-Computer Interaction Lab at UBC, conducting research into the way older adults learn and adopt new technology, and the way larger displays can be leveraged to increase the utility of mobile devices.</p>
-                <p>This fall I am beginning my Masters degree in Human-Computer Interaction Design at the EIT Digital Masters School in Europe.</p>
-                <p>&nbsp;</p>
-				<h2>Here's a little bit about me.</h2>
+                <p>I'm currently pursuing a Masters of Science in Human-Computer Interaction Design at the University of Twente in the Netherlands.</p>
+				<p>For my Bachelor’s degree I began studying computer science.</p>
+				<p>I’ve always enjoyed mathematics and building things, so I fit right in there.</p>
+				<p>Soon after starting however I discovered the art program at my university. I began with a couple simple courses, but then I met a professor whose practice centered on how humanity was changing, or had changed through its relationship and interactions with technology.</p>
+				<p>This quickly became the focus of my undergraduate degree, though practical fine art as well as studies in the history of art and technology.</p>
+				<p>I always kept up my computer science education however as it seemed crucial to be able to practice and understand computers from the inside out, even as I studied it from the outside in.</p>
+				<p>All this is to say that my Bachelor’s degree evolved into a five year research study into the relationship between humans and computers, both from the development of applications and research in a multi-modal user interaction lab, as well as through studies in history and my own artistic practice.</p>
 			</div>
 		</div>
 	</body>
