--- a/resume.html
+++ b/resume.html
@@ -27,7 +27,7 @@
                         <td style="text-align: center;"><h1>Work</h1><h1>Experience</h1></td>
                         <td style="text-align: left; width:85%;">
                             <ul>
-                                <li><a href="http://www.cs.ubc.ca/labs/imager/laboverview.php" target="blank">UBC MUX Lab - 2017-present</a>
+                                <li><a href="http://www.cs.ubc.ca/labs/imager/laboverview.php" target="blank">UBC MUX Lab - 2017-2018</a>
                                     <p>Research assistant: Working with one other undergraduate researcher, I built a prototype kiosk application to facilitate self-directed learning of smart phones by seniors. We began with some preliminary lightweight user testing, then design iterations on the kiosk, and finally we designed and ran a controlled experiment in collaboration with a post-doc in Japan.</p>
                                 </li>
                                 <li><a href="https://ahva.ubc.ca" target="blank">UBC AHVA - 2016-present</a>
@@ -48,6 +48,9 @@
                     <tr>
                         <td style="text-align: left; width:85%;">
                             <ul>
+                                <li><a href="https://www.eitdigital.eu/eit-digital-academy/master-school/" target="blank">EIT Digital Masters School</a>
+                                    <p>Currently pursuing a Masters of Science in Human-Computer Interaction Design.</p>
+                                </li>
                                 <li><a href="https://www.ubc.ca" target="blank">University of British Columbia</a>
                                     <p>Bachelor's of Arts with majors in Computer Science and Visual Art.</p>
                                 </li>
