--- a/projects.html
+++ b/projects.html
@@ -23,11 +23,18 @@
 			</div>
 			<div id="projects" class="contentlist">
                 <h2>Coursework</h2>
-                <p>The focus of my studies in computer science consisted of software engineering, human-computer interaction, web applications, mathematics (statistics, calculus, linear algebra), database design, data structures and algorithms, and functional programming.</p>
+                <p>I'm currently pursuing a dual Master of Science degree at the University of Twente and the University of Paris-Sud, through the EIT Digital Masters School. My area of study is human-computer interaction design, with a minor in innovation and entrepreneurship. The HCI studies concentrate on user-centered design practices and practicing user-experience design, as well as techniques for rapid prototyping and specific ways of capturing user insights, and using them to develop designs.</p>
+                <p>The focus of my undergraduate studies in computer science consisted of software engineering, human-computer interaction, web applications, mathematics (statistics, calculus, linear algebra), database design, data structures and algorithms, and functional programming.</p>
                 <p style="margin-bottom: 25px">
-                In visual art, my work has focused on a study of humans and technology: the technohuman, the “non-spaces” created by technology, the way interaction with technology facilitates humanity.</p>
+                In visual art, my work focused on the study of humans and technology: the technohuman, the “non-spaces” created by technology, the way interaction with technology facilitates humanity.</p>
                 <h2>Projects</h2>
                 <ul>
+                	<li>
+                		<p>Interactive, multi-modal installation in the historic cemetery of Enschede, The Netherlands. Developed in cooperation with local city planners and the local historical society.</p>
+                	</li>
+                	<li>
+                		<p>Development of a multi-discplinary, VR training environment to allow different stakeholders (Police, Medical, Fire) to train together and cooperate in virtual scenarios without being collocated. Based on user research conducted with the Fire Department in Enschede, The Netherlands.</p>
+                	</li>
                 	<li>
                 		<p>Built from scratch the backend of a RESTful API to search, and sort all the enrollment data at University of British Columbia. Then, built a Javascript front-end using the latest libraries (React) to display the data and allow users to explore it in a web-UI environment.</p>
                 	</li>
@@ -41,15 +48,20 @@
                			<p>Collaboratively designed and ran a study into home-delivery grocery systems, with a focus on integrating them into workflow in the kitchen (e.g. smart kitchens, meal planning, etc.).</p>
                		</li>
                		<li>
-               			Multiple artworks and installations involving robotics, Arduinos and web applications, as well as some works in more traditional mediums.
+               			<p>Multiple artworks and installations involving robotics, Arduinos and web applications, as well as some works in more traditional mediums.</p>
                		</li>
                		<li>
-               			Built several simple games as proofs of concept for functional programming and AI courses.
+               			<p>Built several simple games as proofs of concept for functional programming and AI courses.</p>
+               		</li>
+               		<li>
+               			<p>For more past and ongoing projects see my <a href="https://github.com/zlwilson" target="_blank">github repo</a>.</p>
                		</li>
                	</ul>
                	<p>Some varied art projects:</p>
                	<ul>
-               		<li><a href="https://glitch.com/@zlwilson" target="blank">glitch.me profile</a> (featuring some experiments in VR and AR art)</li>
+               		<li>
+               			<p><a href="https://glitch.com/@zlwilson" target="blank">glitch.me profile</a> (featuring some experiments in VR and AR art)</p>
+               		</li>
                		<li><a href="conspiracy/conspiracy.html" target="_blank">conspiracy theory generator</a></li>
 					<li><a href="week3/index.html" target="_blank">week 3</a></li>
 					<li><a href="visa4/index.html" target="blank">Fantastic Beasts Page</a></li>
@@ -57,7 +69,7 @@
                	</ul>
 			</div>
             <div id="under-construction">
-                <h1>Site under construction; please check back for updates soon.</h1>
+                <h1></h1>
             </div>
 		</div>
 	</body>
