new colors and updated resume and homepage

--- a/index.html
+++ b/index.html
@@ -42,13 +42,11 @@
                 <h1>designer, artist, programmer; computer science, human-computer interaction design, fine art.</h1>
 			</div>
 			<div id="content" align="right">
-                <p>I'm currently pursuing a Masters of Science in Human-Computer Interaction Design at the University of Twente in the Netherlands.</p>
-				<p>For my Bachelor’s degree I began studying computer science.</p>
-				<p>I’ve always enjoyed mathematics and building things, so I fit right in there.</p>
-				<p>Soon after starting however I discovered the art program at my university. I began with a couple simple courses, but then I met a professor whose practice centered on how humanity was changing, or had changed through its relationship and interactions with technology.</p>
-				<p>This quickly became the focus of my undergraduate degree, though practical fine art as well as studies in the history of art and technology.</p>
-				<p>I always kept up my computer science education however as it seemed crucial to be able to practice and understand computers from the inside out, even as I studied it from the outside in.</p>
-				<p>All this is to say that my Bachelor’s degree evolved into a five year research study into the relationship between humans and computers, both from the development of applications and research in a multi-modal user interaction lab, as well as through studies in history and my own artistic practice.</p>
+                <p>I'm currently pursuing a Masters of Science in Human-Computer Interaction Design at Université Paris-Sud, through the European Institute of Innovation and Technology.</p>
+				<p>I began my Bachelor’s degree studying computer science. I’ve always enjoyed mathematics and building things, so I fit right in there.</p>
+				<p>Soon after starting however I was drawn towards the visual arts. I met a professor whose practice centered on how humanity was changing, or had changed, through its relationship and interactions with technology. This quickly became the focus of my undergraduate degree, both though my fine art practice, as well as continiued studies into computer science.</p>
+				<p>By the end of my studies I had found the field of Human-Computer Interaction and I was focusing on user research and user-centered design methods in my explorations of human-computer relationships.</p>
+				<p>Now, I refer to myself as a human-computer interaction researcher, and pursue both these interests: I continue to explore how technology and humans affect one another, and I build and design novel technologies focussed on real human needs.</p>
 			</div>
 		</div>
 	</body>
