--- a/projects.html
+++ b/projects.html
@@ -22,11 +22,6 @@
                 </div>
 			</div>
 			<div id="projects" class="contentlist">
-                <h2>Coursework</h2>
-                <p>I'm currently pursuing a dual Master of Science degree at the University of Twente and the University of Paris-Sud, through the EIT Digital Masters School. My area of study is human-computer interaction design, with a minor in innovation and entrepreneurship. The HCI studies concentrate on user-centered design practices and practicing user-experience design, as well as techniques for rapid prototyping and specific ways of capturing user insights, and using them to develop designs.</p>
-                <p>The focus of my undergraduate studies in computer science consisted of software engineering, human-computer interaction, web applications, mathematics (statistics, calculus, linear algebra), database design, data structures and algorithms, and functional programming.</p>
-                <p style="margin-bottom: 25px">
-                In visual art, my work focused on the study of humans and technology: the technohuman, the “non-spaces” created by technology, the way interaction with technology facilitates humanity.</p>
                 <h2>Projects</h2>
                 <ul>
                 	<li>
@@ -57,6 +52,12 @@
                			<p>For more past and ongoing projects see my <a href="https://github.com/zlwilson" target="_blank">github repo</a>.</p>
                		</li>
                	</ul>
+                <h2>Coursework</h2>
+                <p>I'm currently pursuing a dual Master of Science degree at the University of Twente and the University of Paris-Sud, through the EIT Digital Masters School. My area of study is human-computer interaction design, with a minor in innovation and entrepreneurship. The HCI studies concentrate on user-centered design practices and practicing user-experience design, as well as techniques for rapid prototyping and specific ways of capturing user insights, and using them to develop designs.</p>
+                <p>The focus of my undergraduate studies in computer science consisted of software engineering, human-computer interaction, web applications, mathematics (statistics, calculus, linear algebra), database design, data structures and algorithms, and functional programming.</p>
+                <p style="margin-bottom: 25px">
+                In visual art, my work focused on the study of humans and technology: the technohuman, the “non-spaces” created by technology, the way interaction with technology facilitates humanity.</p>
+                <h2>Other Projects</h2>
                	<p>Some varied art projects:</p>
                	<ul>
                		<li>
