--- a/resume.html
+++ b/resume.html
@@ -24,20 +24,28 @@
 			<div id="resume" class="contentlist">
                 <table>
                     <tr>
-                        <td style="text-align: center;"><h1>Work</h1><h1>Experience</h1></td>
+                        <td style="text-align: left;"><h1>Experience</h1></td>
                         <td style="text-align: left; width:85%;">
                             <ul>
-                                <li><a href="http://www.cs.ubc.ca/labs/imager/laboverview.php" target="blank">UBC MUX Lab - 2017-2018</a>
-                                    <p>Research assistant: Working with one other undergraduate researcher, I built a prototype kiosk application to facilitate self-directed learning of smart phones by seniors. We began with some preliminary lightweight user testing, then design iterations on the kiosk, and finally we designed and ran a controlled experiment in collaboration with a post-doc in Japan.</p>
+                                <li><a href="http://www.cs.ubc.ca/labs/imager/laboverview.php" target="blank">Samsung + eDAPT Lab (UBC)</a> | Vancouver, BC - 2017-18
+                                    <p>Undergraduate Researcher</p>
+                                    <p>Working with one other undergraduate researcher, I built a prototype kiosk to help seniors learn to use smart phones, which expanded on a proptype developed by a reasearcher at the Samsung UX research lab in Vancouver, BC. We began with lightweight user testing to gather initial feedback while we iterated on the design of the kiosk, and finally we designed and ran a controlled experiment in collaboration with a post-doc in Japan which was presented as a poster at CSCW '18.</p>
                                 </li>
-                                <li><a href="https://ahva.ubc.ca" target="blank">UBC AHVA - 2016-present</a>
-                                    <p>Web master and graphic designer: Working as the design, gallery, and web assistant for the Art History, Visaul Art and Theory (AHVA) department at UBC, I designed promotional material for all department events, and openings at the AHVA gallery. As a web master, I kept the website up to date,  migrated department orientation materials from paper to the website, and translated all the department safety training to online courses. I also streamlined some backend processes: simplified information input for administrative staff, and reorganized categorization to enable more automation.</p>
+                                <li><a href="http://www.meltcollective.com" target="blank">Melt Collective</a> | Vancouver, BC - 2018
+                                    <p>Resident Artist</p>
+                                    <p>For 6 months I worked on art projects in the Melt Collective lab at UBC. I helped ideate then prototyped creative uses for recycled plastics. I developed a technique to mold plastic from waste plastic bags, then I built a prototype archway by manufacturing bricks using this technique and plastic bags gathered from the city.</p>
                                 </li>
-                                <li><a href="https://www.ck12.org" target="blank">Ck-12 - 2011-16</a>
-                                    <p>Graphic designer: I developed a prototype content delivery app for iOS, created graphics for many of their science textbooks, created the template for their study guides, and designed templates and examples for new web applications in development.</p>
+                                <li><a href="https://ahva.ubc.ca" target="blank">Visual Art Department (UBC)</a> | Vancouver, BC - 2016-18
+                                    <p>Graphics/Media Production Assistant</p>
+                                    <p>Based on data I gathered from the varied labs of the art department, I reoprganized the website of the department into a new online training and information hub for students to access all relevant safety, training and other information. I also streamlined some backend processes for the administration by simplifing information input, and reorganized data to enable more automation. As the departments designer I also created promotional material for visiting artist events and exhibition openings, kept their website up to date.</p>
                                 </li>
-                                <li><u>4Band - 2013-14</u>
-                                    <p>UI/UX Designer and Lead Illustrator for a small music collaboration startup, 4Band, from 2013-2014.  I was tasked with the company logo and branding, as well as creating the UI elements of the software. With the other designer, we designed the entire user experience: a limited social platform plus recording software for musicians to collaborate within.</p>
+                                <li><a href="https://www.ck12.org" target="blank">Ck-12</a> | Palo Alto, CA - 2011-16
+                                    <p>Designer (Contract)</p>
+                                    <p>I developed a prototype content delivery app for iOS, created graphics for many of their science textbooks, created the template for their study guides, and designed templates and examples for new web applications in development.</p>
+                                </li>
+                                <li><u class="fakelink">4Band</u> | Mountain View, CA - 2013-14
+                                    <p>UI/UX Designer and Lead Illustrator</p>
+                                    <p>As illustrator for this small music collaboration startup, I was tasked with the company logo and branding, as well as creating the UI elements of the software. With one other designer, I designed the entire user experience: a limited social platform plus recording software for musicians to collaborate within.</p>
                                 </li>
                             </ul>
                         </td>
@@ -46,33 +54,136 @@
                 <hr>
                 <table>
                     <tr>
+                    	<td style="text-align: center; padding-right: 50pt"><h1>Skills</h1></td>
+                        <td style="text-align: left; width:25%; vertical-align:top">
+                        	<u class="fakelink">Software</u>
+                            <ul style="padding-left: 5pt;">
+                                <li>
+                                    <p>Illustrator</p>
+                                </li>
+                                <li>
+                                    <p>Photoshop</p>
+                                </li>
+                                <li>
+                                    <p>InDesign</p>
+                                </li>
+                                <li>
+                                    <p>AfterEffects</p>
+                                </li>
+                                <li>
+                                    <p>ProTools</p>
+                                </li>
+                                <li>
+                                    <p>FinalCut Pro</p>
+                                </li>
+                                <li>
+                                    <p>Sketch</p>
+                                </li>
+                                <li>
+                                    <p>Figma</p>
+                                </li>
+                                <li>
+                                    <p>Keynote</p>
+                                </li>
+                            </ul>
+                        </td>
+                        <td style="text-align: left; width:25%; vertical-align:top">
+                        	<u class="fakelink">Design</u>
+                            <ul style="padding-left: 5pt;">
+                                <li>
+                                    <p>User Research</p>
+                                </li>
+                                <li>
+                                    <p>User Testing</p>
+                                </li>
+                                <li>
+                                    <p>Interaction Design</p>
+                                </li>
+                                <li>
+                                    <p>Visual Design</p>
+                                </li>
+                                <li>
+                                    <p>Storytelling</p>
+                                </li>
+                                <li>
+                                    <p>Scenario Design</p>
+                                </li>
+                                <li>
+                                    <p>Prototyping</p>
+                                </li>
+                                <li>
+                                    <p>Storyboarding</p>
+                                </li>
+                                <li>
+                                    <p>Video Editing</p>
+                                </li>
+                            </ul>
+                        </td>
+                        <td style="text-align: left; width:25%; vertical-align:top">
+                        	<u class="fakelink">Coding</u>
+                            <ul style="padding-left: 5pt;">
+                                <li>
+                                    <p>Java</p>
+                                </li>
+                                <li>
+                                    <p>C/C++/C#</p>
+                                </li>
+                                <li>
+                                    <p>Javascript</p>
+                                </li>
+                                <li>
+                                    <p>Python</p>
+                                </li>
+                                <li>
+                                    <p>HTML/CSS</p>
+                                </li>
+                                <li>
+                                    <p>Arduino</p>
+                                </li>
+                                <li>
+                                    <p>SVN/Git</p>
+                                </li>
+                                <li>
+                                    <p>Unity</p>
+                                </li>
+                            </ul>
+                        </td>
+                        <td style="text-align: left; width:25%; vertical-align:top">
+                        	<u class="fakelink">Other</u>
+                            <ul style="padding-left: 5pt;">
+                                <li>
+                                    <p>Business Strategy</p>
+                                </li>
+                                <li>
+                                    <p>Illustration</p>
+                                </li>
+                                <li>
+                                    <p>Marketing</p>
+                                </li>
+                                <li>
+                                    <p>3D Printing</p>
+                                </li>
+                                <li>
+                                    <p>Laser Cutting</p>
+                                </li>
+                                <li>
+                                    <p>Agile/SCRUM</p>
+                                </li>
+                            </ul>
+                        </td>
+                    </tr>
+                </table>
+                <hr>
+                <table>
+                    <tr>
+                    	<td style="text-align: left;"><h1>Education</h1></td>
                         <td style="text-align: left; width:85%;">
                             <ul>
-                                <li><a href="https://www.eitdigital.eu/eit-digital-academy/master-school/" target="blank">EIT Digital Masters School</a>
-                                    <p>Currently pursuing a Masters of Science in Human-Computer Interaction Design.</p>
+                                <li><a href="https://www.eitdigital.eu/eit-digital-academy/master-school/" target="blank">European Institute of Innovation and Technology</a>
+                                    <p>MSc in Human-Computer Interaction Design with a minor in Innovation and Entrepreneurship.</p>
                                 </li>
                                 <li><a href="https://www.ubc.ca" target="blank">University of British Columbia</a>
-                                    <p>Bachelor's of Arts with majors in Computer Science and Visual Art.</p>
-                                </li>
-                            </ul>
-                        </td>
-                        <td style="text-align: center;"><h1>Education</h1></td>
-                    </tr>
-                </table>
-                <hr>
-                <table>
-                    <tr>
-                        <td style="text-align: center;"><h1>Technical</h1><h1>Skills</h1></td>
-                        <td style="text-align: left; width:85%;">
-                            <ul>
-                                <li><u>Adobe Creative Suite</u>
-                                    <p>Illustrator, Photoshop, InDesign, AfterEffects</p>
-                                </li>
-                                <li><u>Coding languages</u>
-                                    <p>C, C++, Obj-C (iOS development); Java (desktop and Android development); Javascript, HTML, CSS (web applications and prototyping); SVN/Git; SQL and Database design</p>
-                                </li>
-                                <li><u>Sound and Video</u>
-                                    <p>Reason, ProTools and GarageBand; FinalCutPro</p>
+                                    <p>BAs in Computer Science and Visual Art.</p>
                                 </li>
                             </ul>
                         </td>
@@ -81,6 +192,7 @@
                 <hr>
                 <table>
                     <tr>
+                    	<td style="text-align: left;"><h1>Other</h1><h1>Experience</h1></td>
                         <td style="text-align: left; width:85%;">
                             <ul>
                                 <li><a href="https://www.idtech.com" target="blank">iD-Tech Camps</a>
@@ -89,17 +201,16 @@
                                 <li><a href="http://romp.com" target="blank">ROMP Snowwear</a>
                                     <p>North American Team Rider for ROMP Snowwear from 2013–2016. Creating original web content: videos and photos, and raising brand awareness through promotions, community outreach, and social media.</p>
                                 </li>
-                                <li><u>Adobe/Foothill College</u>
+                                <li><u class="fakelink">Adobe/Foothill College</u>
                                     <p>Instructor for Adobe Day at Foothill College, teaching local middle- and high school teachers Adobe Photoshop, InDesign, Illustrator, Flash, and Acrobat.</p>
                                 </li>
                             </ul>
                         </td>
-                        <td style="text-align: center;"><h1>Other</h1><h1>Experience</h1></td>
                     </tr>
                 </table>
 			</div>
             <div id="under-construction">
-                <h1>Site under construction; please check back for updates soon.</h1>
+                <h1> </h1>
             </div>
 		</div>
 	</body>
