--- a/projects.html
+++ b/projects.html
@@ -25,7 +25,7 @@
                 <h2>Projects</h2>
                 <ul>
                 	<li>
-                		<p>Interactive, multi-modal installation in the historic cemetery of Enschede, The Netherlands. Developed in cooperation with local city planners and the local historical society.</p>
+                		<p>Interactive, multi-modal installation in the historic cemetery of Enschede, NL. Developed in cooperation with local city planners and the local historical society.</p>
                 	</li>
                 	<li>
                 		<p>Development of a multi-discplinary, VR training environment to allow different stakeholders (Police, Medical, Fire) to train together and cooperate in virtual scenarios without being collocated. Based on user research conducted with the Fire Department in Enschede, The Netherlands.</p>
