--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <ul>
                         <li><a href="index.html" id="homeBtn">Home</a></li>
                         <li><a href="resume.html" id="homeBtn">Resumé</a></li>
-                        <li><a href="projects.html" id="projectsBtn">Projects</a></li>
+                        <li><a href="projects.html" id="projectsBtn">Portfolio</a></li>
                         <li><a href="contact.html" id="contactBtn">Contact</a></li>
                     </ul>
                 </div>
